# tree-sittery

./: Cargo.toml  build.rs  readme.md
.lsp/.cache/: db.transit.json
docs/: gen_html.sh  index.html  slide.md
docs/example/: ddl.sql  garphql.graphql  rust.rs
slide/: slide.md
src/: main.rs  parser.rs  sql-s1  type aaaa{b: int @directive("{{{}"), c: .gql
tree-sitter-graphql/: package-lock.json
tree-sitter-json/: package.json  tree-sitter-json.wasm
tree-sitter-mermaid/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter-mermaid/bindings/node/: binding.cc  index.js
tree-sitter-mermaid/bindings/rust/: lib.rs
tree-sitter-mermaid/corpus/: multiple_table.txt  only_table_name.txt  student_table.txt  table_with_attr.txt
tree-sitter-mermaid/src/: grammar.json  node-types.json  parser.c
tree-sitter-rust/: package.json  tree-sitter-rust.wasm
tree-sitter-sql/: package-lock.json  tree-sitter-sql.wasm
