[package]
name = "tree-sittery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.8"
strfmt = "0.2.2"
anyhow = "1.0.62"
# wasm-bindgen = "0.2"
itertools = "0.10.3"
phf = { version = "0.11.1", features = ["macros"] }

[build-dependencies]
cc = "1.0.73"
